--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
   <link rel="stylesheet" href="assets/css/receita/receita-titulo.css">
   <link rel="stylesheet" href="assets/css/receita/receita.css">
   <link rel="stylesheet" href="assets/css/receita/receitas.css">
+  <link rel="stylesheet" href="assets/css/quemSomos/quemSomos-descricao.css">
+  <link rel="stylesheet" href="assets/css/quemSomos/quemSomos-titulo.css">
+  <link rel="stylesheet" href="assets/css/quemSomos/quemSomos.css">
+  <link rel="stylesheet" href="assets/css/pessoa/pessoa-funcao.css">
+  <link rel="stylesheet" href="assets/css/pessoa/pessoa-imagem.css">
+  <link rel="stylesheet" href="assets/css/pessoa/pessoa-nome.css">
+  <link rel="stylesheet" href="assets/css/pessoa/pessoa.css">
+  <link rel="stylesheet" href="assets/css/pessoa/pessoas.css">
+  <link rel="stylesheet" href="assets/css/rodape.css">
+  <link rel="stylesheet" href="assets/css/logo.css">
 
 
 </head>
@@ -43,7 +53,7 @@
   </header>
   <!-- ############################################################################## -->
   <section class="banner">
-    <img class="banner__imagem" src="assets/img/banner.jpg">
+    <div class="banner__imagem"></div>
     <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
   </section>
   <!-- ############################################################################## -->
@@ -112,9 +122,8 @@
   <section class="quem-somos">
     <h3 class="quem-somos__titulo">Quem somos</h3>
     <p class="quem-somos__descricao">Conheça a comunidade por trás da iniciativa</p>
-
-    <div class="pessoas">
-
+  
+    <div class="pessoas"> 
       <div class="pessoa">
         <div class="pessoa__imagem pessoa__imagem--roberta"></div>
         <span class="pessoa__nome">Roberta</span>
@@ -135,6 +144,10 @@
       
     </div>
   </section>
+
+  <footer class="rodape">
+    <span>Contato: exemplo@email.com.br</span>
+  </footer>
 </body>
 
 </html>
